Migrate to newer Jakarta dependencies and update package names
Signed-off-by: Michael Edgar <michael@xlate.io>